# CS100

Labs/lab-02-integration-unit-testing-kevint1221-master/: .gitignore  array.sh  test.cpp
Labs/lab-03-git-flow-lab_coding_team-master/: .gitignore  CMakeLists.txt  c-count.h
Labs/lab-04-composite-pattern-lab4_coding_team-master/: add.hpp  main.cpp  (+5 more)
lab-01-git-github-kevint1221-master/: main.cpp
lab-02-integration-unit-testing-kevint1221-master/: CMakeLists.txt  c-echo.h  list.sh  main.cpp
lab-03-git-flow-lab_coding_team-master/: main.cpp
lab-04-composite-pattern-lab4_coding_team-master/: div.hpp  op.hpp  unit_test.cpp
lab-05-strategy-pattern-lab5-master/: Op.h  VectorContainer.h  unit_test.cpp
lab-06-decorator-pattern-lab06_groupi-master/: Abs.h  Add.h  Mock.h  Paren.hpp  Rand.h  base.hpp  selection_sort.hpp  trunc.hpp
lab-07-abstract-factory-pattern-lab07_i-master/: CMakeLists.txt  double_factory.hpp  precision_rand.hpp  scientific_op.hpp  scientific_rand.hpp
lab-08-command-pattern-easy_easy_lab8-master/: CMakeLists.txt  calculator.cpp  div.hpp  divCommand.hpp  initialCommand.hpp  op.hpp  precision_factory.hpp  precision_op.hpp  precision_rand.hpp  rand.hpp  subCommand.hpp  unit_test.cpp
lab-09-iterator-pattern-funlab-master/: Floor.h  README.md  Trunc.hpp  add.hpp  base.hpp  div.hpp  iterator.hpp  main.cpp  mult.hpp  nullIterator.hpp  op.hpp  pow.hpp
lab-10-visitor-pattern-tobecontinued-master/: Abs.h  Ceil.h  Floor.h  Paren.hpp  Trunc.hpp  binaryIterator.hpp  decorator.hpp  iterator.hpp  main.cpp  mult.hpp  op.hpp  pow.hpp  preorderIterator.hpp
(+54 files in other folders)
